# split-cost

./: .env  .gitignore  Makefile  pyproject.toml
app/: __init__.py  config.py
app/api/: __init__.py  dependencies.py  main.py
app/database/: __init__.py  base_session.py  session.py
app/middlewares/: __init__.py  error_handler.py
app/modules/: __init__.py
app/modules/common/: __init__.py  exceptions.py  logger.py  service.py
app/modules/common/models/: __init__.py  base.py  mixin.py
app/modules/common/schemas/: __init__.py  permission_type.py
app/modules/group/: __init__.py
app/modules/group/models/: __init__.py  group.py  user_group.py
app/modules/group/schemas/: __init__.py  invation.py
app/modules/group/src/: __init__.py  factory.py
app/modules/group/src/api/: __init__.py  http_router.py  router.py
app/modules/group/src/service/: __init__.py  group_operations.py  invitation.py
app/modules/group/tests/: __init__.py
app/modules/permission_manager/: __init__.py
app/modules/permission_manager/src/: __init__.py  factory.py
app/modules/permission_manager/src/api/: __init__.py  (+1 more)
app/modules/user/: __init__.py  exceptions.py
app/modules/user/models/: __init__.py  user.py
app/modules/user/schemas/: __init__.py  user.py
app/modules/user/src/: __init__.py  factory.py
migrations/: env.py
migrations/versions/: 577800ac1eee_create_user_schema.py  69f7f54aa368_create_group_schema.py  6cb7d0e083c5_create_user_table.py  7903432138c5_create_user_group_table.py  b3c9b9994b57_create_user_table.py  b851a32979ad_create_group_table.py
(+10 files in other folders)
