[tool.poetry]
name = "split-cost"
version = "0.1.0"
description = ""
authors = ["cgtyunerr <cgtyuner06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.5"
jose = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
